web/skins/classic/css/base/skin.css
/*
 * ZoneMinder Base Stylesheet, $Date$, $Revision$
 * Copyright (C) 2001-2008 Philip Coombes
 * 
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License
 * as published by the Free Software Foundation; either version 2
 * of the License, or (at your option) any later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 */ 

/*
 * Primary look and feel styles
 */

:root {
  --scrollbarBG: #F1F1F1;
  --sliderBG: #C1C1C1;
}

@font-face {
  font-family: "Material Icons";
  font-style: normal;
  font-weight: 400;
  font-display: block;
  src: url("../fonts/material-icons.woff2") format("woff2"), url("../fonts/material-icons.woff") format("woff");
}
.material-icons {
  font-family: "Material Icons";
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  line-height: 1;
  letter-spacing: normal;
  text-transform: none;
  display: inline-block;
  white-space: nowrap;
  word-wrap: normal;
  direction: ltr;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  font-feature-settings: "liga";
  vertical-align: middle;
  display: none;
}

.material-icons.md-18 { font-size: 18px; }
.material-icons.md-36 { font-size: 36px; }

html,
body {
  height: 100%;
  margin: 0;
}

body {
  font-family: "Open Sans", Verdana, Arial, Helvetica, sans-serif;
  font-size: 13px;
  font-weight: 300;
  text-align: center;
}

body.sticky {
  display: flex;
  flex-flow: column nowrap;
  flex-direction: column;
}

h1 {
    font-family: inherit;
    font-size: 120%;
    font-weight: bold;
    text-align: center;
}

h2 {
    font-family: inherit;
    font-size: 110%;
    font-weight: bold;
}

h3 {
    font-family: inherit;
    font-size: 100%;
    font-weight: bold;
}

h4 {
    font-family: inherit;
    font-size: 100%;
}

p {
    font-family: inherit;
    font-size: 100%;
    font-weight: normal;
}

/*
th {
    padding: 3px;
    text-transform: uppercase;
    font-size: 0.8em;
    font-weight: 600;
}
*/

.thead-highlight {
  background-color:#dfe4ea;
}

/* rounded table head top corners */
table th:first-child{
  border-radius:5px 0 0 0 ;
}
table th:last-child{
  border-radius:0 5px 0 0 ;
}

a {
  cursor: pointer;
}

a.optionhelp,
a:link {
    color: #0fbcf9;
    text-decoration: none;
}

a:visited {
    color: #44b8eb;
    text-decoration: none;
}

a:hover {
    text-decoration: none; 
    background-color:rgba(72, 84, 96,0.2);
    border-radius:4px;
}

label {
    margin: 0 4px;
}

a.btn,
button.btn {
  line-height: 1;
  font-size: 18px;
  margin-bottom: 3px;
}
#toolbar .btn-normal {
  margin-right: 3px;
}
#rightButtons .btn-normal,
#leftButtons .btn-normal {
  margin-right: 0px;
}
input, textarea, select, button, .btn-primary {
    border: 1px #ccc solid;
    padding: 5px;
    border-radius: 1px;
    font-family: inherit;
    font-weight: 400;
    font-size: 100%;
    color: #333333;
    background-color: #f8f8f8;
    text-align: left;
    border-radius:4px;
}

input.noborder {
    border: 0;
}

input[disabled] {
    color: #888888;
}

.modal img {
    max-width: 100%;
}
img {
  display: inline-block;
}
img.normal {
    border: white solid 1px;
}

img.alarm {
    border: red solid 1px;
}

hr {
    height: 1px;
    width: 100%;
    border: 0;
    color: #3498db;
    background-color: #3498db;
}

/*
 * Tabbed headings
 */
ul.tabList {
    float: left;
    list-style: none;
    padding: 0;
    margin: 0 0 -4px 0;
    white-space: nowrap;
    text-align: left;
}

ul.tabList li {
    float: left;
    border: 1px solid;
    color: #333333;
    border: #ccc solid 1px;
    border-bottom-width: 0;
    margin: 0 2px 0 0;
    background: #eee;
    text-align: center;
    padding: 5px 10px;
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
}

ul.tabList li a {
    text-decoration: none;
}

ul.tabList li:hover {
    background-color: #eeeeee;
}

ul.tabList li.active {
    background-color: #ffffff;
    border-bottom: #7f7fb2 dotted 1px;
}

ul.tabList li.active a {
  font-weight: bold;
}

#content {
  width: 100%;
  margin: 0 auto 8px auto;
  line-height: 130%;
  text-align: center;
  clear: both;
}
#content::backdrop {
  background-color: white;
}
body.sticky #content {
/*
  flex: 1 1 auto;
  display: flex;
  flex-flow: column;
*/
  overflow: hidden;
  height: 100%;
}

#inner-content {
  overflow: auto;
  height: 100%;
  width: 100%;
}

/*
 * Major league table for multiple inputs or presentation
 */

#content table.major {
    margin: 4px auto;
    width: 100%;
    border-collapse: collapse;
}

#content table.major tr.highlight {
    background-color: #eeeeee;
}

#content table.major thead tr th {
    padding-top: 6px;
    padding-bottom: 6px;
    vertical-align: middle;
}

#content table.major tfoot td {
    padding-top: 6px;
    padding-bottom: 6px;
    vertical-align: middle;
}

#content table.major th, #content table.major td {
    border-bottom: 2px solid #f2f2f2;
    padding: 5px 10px;
    text-align: left;
}

#content table.major th {
    vertical-align: bottom;
}

#content table.major td {
    vertical-align: middle;
}

#content table.major th[scope=row] {
    padding: 4px 3px 3px;
    vertical-align: top;
}

#content table.major .colMark, #content table.major .colSelect {
    text-align: center;
}
/*
 * Lesser table for very simple forms
 */

#content table.minor {
    width: 280px;
    margin: 0 auto;
}

#content table.minor td {
    padding: 4px;
}

#content table.minor .colLeft {
    width: 50%;
    text-align: right;
}
/* ... */

